<resources>
    <string name="app_name">"Ace IM (beta)"</string>
    <string name="error_broken_auth_data">No required authentication data provided</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_groupchat_already_exists">Groupchat with this ID already exists</string>
    <string name="error_no_groupchat_available">No groupchat with this ID available on server</string>
    <string name="error_cannot_authorize">Cannot authorize, authentication data seems to be incorrect</string>
    <string name="error_connection_limit_exceeded">You have been disconnected, due to connection rate limit exceeding.</string>
    <string name="error_no_x_protocol_found">No %s protocol plugin installed found. Click to search on Play Store.</string>
    <string name="default_theme">Default (transparent)</string>
    <string name="theme">Theme</string>
    <string name="connect_first">To send a message, please connect account to a network</string>
    <string name="reconnection_attempts">Reconnection attempts</string>
    <string name="network_unavailable">Data network is unavailable, try to connect later</string>
    <string name="unfilled_key_field">The key field (%s) cannot be empty</string>
    <string name="key_field_contain_spaces">The key field (%s) cannot contain spaces</string>
    <string name="version_X" formatted="false">Version: %s</string>
    <string name="api_version_X" formatted="false">API version: %s</string>
    <string name="all_transfers">All transfers</string>
    <string name="unsaved_data">Unsaved data exists</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="search_result">Search result</string>
    <string name="rename_X" formatted="false">Rename %s</string>
    <string name="move_X" formatted="false">Move %s</string>
    <string name="add_X">Add %s</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="unknown_command" formatted="false">Unknown command: %s</string>
    <string name="choose_photo">Choose photo</string>
    <string name="take_photo">Take photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="setting_account_icon">Set new account icon</string>
    <string name="force_draw_wallpaper">Force wallpaper drawing</string>
    <string name="set_status">"Set status"</string>
    <string name="pw_does_not_match">Passwords does not match</string>
    <string name="enter_password">Enter a new password</string>
    <string name="reenter_password">Re-enter new password</string>
    <string name="export_accounts">Export accounts to storage</string>
    <string name="import_accounts">Import accounts from storage file</string>
    <string name="utils">Utils</string>
    <string name="buddy_sends_files">%s sends the following files:</string>
    <string name="send_photo">Send photo</string>
    <string name="press_to_open">Press to open</string>
    <string name="file_transfers" formatted="false">Files - %s</string>
    <string name="no_app_for_picking_file_found">No file explorer found for picking files. Please install one and try again.</string>
    <string name="confirm_delete_history">Confirm deleting all buddy\'s chat history? (Cannot undo!)</string>
    <string name="get_more" formatted="false">Get next %s</string>
    <string name="new_message_added">New message added</string>
    <string name="smileys_in_dialog">Smileys in separate dialog</string>
    <string name="history_header" formatted="false">Chat history - %s</string>
    <string name="file_transfer_init" formatted="false">Initializing...</string>
    <string name="file_transfer_completed" formatted="false">Transfer completed</string>
    <string name="file_transfer_bytes_completed" formatted="false">%s of %s bytes transferred</string>
    <string name="pick_protocol_to_proceed">Pick protocol in a combo box above to proceed</string>
    <string name="no_protocol_services_installed_found">Seems like you don\'t have any protocol services installed on your device. Protocol services enable support for particular chat service (XMPP, ICQ etc). Please press Play market button below to search for protocol services in Google Play.</string>
    <string name="no_protocol_service_installed_found_for_x">No protocol service installed found for %s.</string>
    <string name="click_to_search_in_play">Click here to search in Play market</string>
    <string name="unfilled_mandatory_warning">The highlighted fields are mandatory</string>
    <string name="options">Options</string>
   	<string name="options_for" formatted="false">Options for %s</string>
    <string name="X_cannot_be_empty" formatted="false">%s cannot be empty</string>
    <string name="wrong_pw">Wrong password</string>
    <string name="use_master_password">Use Master Password</string>
    <string name="pls_enter_master_password">Please enter the Master Password</string>
    <string name="old_pw">Old Password</string>
    <string name="new_pw">New Password (leave blank for removing)</string>
    <string name="master_password">Master Password</string>
    <string name="view_type">View type</string>
   	<string name="view_type_auto">Auto (Screen size dependent)</string>
    <string name="view_type_simple">Simple</string>
    <string name="view_type_tablet">Tablet</string>
    <string name="view_type_panorama">Panorama</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="screen_orientation_system">System</string>
    <string name="screen_orientation_portrait">Portrait</string>
    <string name="screen_orientation_landscape">Landscape</string>
    <string name="screen_orientation_sensor">Sensor</string>
    <string name="blink_type_off">Don\'t blink</string>
    <string name="blink_type_default">Default Android blink</string>
    <string name="blink_type_native">Device-specific blink (may not work on every device)</string>
    <string name="sound_type_all_on">"Sound + vibra"</string>
    <string name="sound_type_vibra">"Vibra only"</string>
    <string name="sound_type_off">"Off"</string>
    <string name="sound_type_profile">"Profile dependent"</string>
    <string name="sound_type_sound">"Sound only"</string>
    <string name="statusbar_type_messages">"Incoming messages"</string>
    <string name="statusbar_type_accounts">"Accounts"</string>
    <string name="statusbar_type_off">"Off"</string>
    <string name="statusbar_type_icon">Application icon</string>
    <string name="unread_group">"Unread"</string>
    <string name="online_group">"Online"</string>
    <string name="offline_group">"Offline"</string>
    <string name="chats_group">"Group chats"</string>
    <string name="not_in_list_group">"Not in list"</string>
    <string name="create_groupchat">Create group chat</string>
    <string name="connect_to_chat">Connect to chat</string>
    <string name="refresh_chat_list">Refresh chats list</string>
    <string name="joinedchats">Joined chats</string>
    <string name="chat_name">Chat name</string>
    <string name="nickname">Nickname</string>
    <string name="chat_id">Chat ID (letters, numbers, dash, and underscore only)</string>
    <string name="pwd_protected">Protect with password</string>
    <string name="password">Password</string>
    <string name="get_available_chats">Get available</string>
    <string name="chat_options">Chat options</string>
    <string name="hide_participants">Hide participants</string>
    <string name="show_participants">Show participants</string>
    <string name="chat_enter_manually">Enter manually</string>
    <string name="this_account_to_be_enabled" formatted="false">"'%s' is to be enabled, proceed?"</string>
    <string name="this_account_to_be_disabled" formatted="false">"'%s' is to be disabled, proceed?"</string>
    <string name="name">Name</string>
    <string name="account_activity_log">Account activity log</string>
    <string name="copy_all">Copy all</string>
    <string name="personal_info_X">Personal info - %s</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="autoconnect">Autoconnect on startup</string>
    <string name="message_sound_only">Message sound only</string>
    <string name="manage_visibility">Visibility</string>
    <string name="blink_led">Blink LED on new message</string>
    <string name="secure_login">Secure login</string>
    <string name="send_typing">Send typing notifications</string>
    <string name="fullscreen_landscape_kb">Fullscreen landscape keyboard</string>
    <string name="deny_messages_not_from_list">"Deny all messages from 'not in list' buddies"</string>
    <string name="sound_volume">Notification volume</string>
    <string name="buddy">"Buddy "</string>
    <string name="group">"Group "</string>
    <string name="X_added" formatted="false">%s added</string>
    <string name="X_modified" formatted="false">%s modified</string>
    <string name="X_deleted" formatted="false">%s deleted</string>
    <string name="error_fill_uid">Please fill in UID field</string>
    <string name="search_buddies">"Search/Add..."</string>
    <string name="add_to_list">"Add"</string>
    <string name="rename">"Rename"</string>
    <string name="move">"Move"</string>
    <string name="inempty_group">"This group is not empty. What to do with buddies from it?"</string>
    <string name="dont_draw_smileys">"Don't draw smileys"</string>
    <string name="text_size">Chat font size</string>
    <string name="file_from">"File from "</string>
    <string name="files">" files"</string>
    <string name="add_me_request">"Hurry, add me to your list"</string>
    <string name="wait">"Please wait..."</string>
    <string name="export">Export to SD card</string>
    <string name="copied_to_clipboard">"Copied to clipboard"</string>
    <string name="send_file">"Send file"</string>
    <string name="about">About</string>
    <string name="delete_history">"Delete history"</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="doublelist">Two-column list</string>
    <string name="notinlist_save">"Save 'Not in list' group"</string>
    <string name="sound_type">"Sound notifications"</string>
    <string name="statusbar_type">"Status bar notifications"</string>
    <string name="contact_menu" formatted="false">Menu for %s</string>
    <string name="im_here" formatted="false">I\'m here - %s</string>
    <string name="deny">"Deny"</string>
    <string name="allow">"Allow"</string>
    <string name="ignore">"Ignore"</string>
    <string name="add_group">"Add group"</string>
    <string name="wait_starting">"Starting"</string>
    <string name="new_account">"New account"</string>
    <string name="offline">"Offline"</string>
    <string name="online">Online</string>
    <string name="x_gone_y" formatted="false">%s gone %s</string>
    <string name="accounts">"Accounts"</string>
    <string name="me">"Me"</string>
    <string name="unread_messages">"Unread messages"</string>
    <string name="connect">"Connect"</string>
    <string name="disconnect">"Disconnect"</string>
    <string name="account_settings">"Account settings"</string>
    <string name="more">"More"</string>
    <string name="manage_accounts">"Manage accounts"</string>
    <string name="exit_app">"Exit Ace IM"</string>
    <string name="pick_status">"Pick a status"</string>
    <string name="smileys">Smileys</string>
    <string name="disconnected">"Disconnected"</string>
    <string name="buddy_details">"Buddy details"</string>
    <string name="close_chat">Close chat</string>
    <string name="history">History</string>
    <string name="account_options">Account options</string>
    <string name="general_options">General options</string>
    <string name="send_my_location">"Send my location"</string>
    <string name="menu_value_join_chat">Join chat</string>
    <string name="menu_value_leave_chat">Leave chat</string>
</resources>